# multi-stream-lab

./: Dockerfile  Makefile  README.md  demo.py  doc.md  pyproject.toml
multistreamlab/: __init__.py  base.py  download_frontend.sh  evaluate.py  server.py
